--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
-# H2 Database configuration
-spring.datasource.url=jdbc:h2:mem:employeedb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_payroll?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=ArjunRoot
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Enable H2 console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# Hibernate Properties
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#logger
+logging.level.root=INFO
+logging.level.com.bridgelabz.employeepayrollapp=DEBUG
+logging.file.name=logs/app.log
