[Arjun] Add.Adding application properties for dev and production

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,17 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #logger
-logging.level.root=INFO
-logging.level.com.bridgelabz.employeepayrollapp=DEBUG
-logging.file.name=logs/app.log
+# Logging File Configuration
+logging.file.name=application.log
+
+# Logging Levels for Different Packages
+logging.level.root=WARN
+logging.level.org.springframework.web=WARN
+logging.level.org.hibernate=ERROR
+logging.level.com.bridgelabz=DEBUG
+
+# Logging Pattern for Console and File
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%level] [%thread] [%logger{5}:%line] %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] [%level] %logger{36} %msg%n
+
+
