--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,13 @@
 # Environment
 environment=DEV
 
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/payroll_db
+spring.datasource.username=${PAYROLL_DB_USERNAME:payrolluser}
+spring.datasource.password=${PAYROLL_DB_PASSWORD:password}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
 # Logging Levels
 logging.level.root=WARN
 logging.level.org.springframework.web=WARN
