--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_payroll?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=ArjunRoot
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/employee_payroll?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=ArjunRoot
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+# Enable the dev profile
+spring.profiles.active=dev
 
 # Hibernate Properties
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #logger
