[Arjun] Add.Add remaining properties and Ensure validations is done on the Payroll DTO

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,7 +6,8 @@ spring.datasource.username=${PAYROLL_DB_USERNAME:payrolluser}
 spring.datasource.password=${PAYROLL_DB_PASSWORD:password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+#Create when we want to create new database every time application runs & update when we want to  update in them
 
 # Logging Levels
 logging.level.root=WARN
