[Arjun] Add.Ability to save EmployeePayroll Data to MySQL DB

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,7 +6,7 @@ spring.datasource.username=${PAYROLL_DB_USERNAME:payrolluser}
 spring.datasource.password=${PAYROLL_DB_PASSWORD:password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #Create when we want to create new database every time application runs & update when we want to  update in them
 
 # Logging Levels
