--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ README.md
 application.log
 application.log.2025-02-27.0.gz
 application
+application.log.2025-02-28.0.gz
+application.log.2025-03-01.0.gz
 
 ### NetBeans ###
 /nbproject/private/
